fixed deprecated calls for Integer [3191]