@@ -2063,14 +2063,14 @@ public class AddeImageChooser extends AddeChooser implements
             if (lines.equalsIgnoreCase(ALL)) {
                 lines = "" + (int) baseNumLines;
             }
-            int numLines = new Integer(lines.trim()).intValue();
+            int numLines = Integer.parseInt(lines.trim());
 
             String elems = (toks.size() > 1) ? "" + toks.get(1) : ""
                     + (int) baseNumElements;
             if (elems.equalsIgnoreCase(ALL)) {
                 elems = "" + baseNumElements;
             }
-            int numElements = new Integer(elems.trim()).intValue();
+            int numElements = Integer.parseInt(elems.trim());
             return new int[] { (int) Math.min(numLines, baseNumLines),
                     (int) Math.min(numElements, baseNumElements) };
         }
@@ -2193,7 +2193,7 @@ public class AddeImageChooser extends AddeChooser implements
             } else if (prop.equals(PROP_MAG)) {
                 String[] pair = getPair(value);
                 if (pair != null) {
-                    setMagSliders(new Integer(pair[0]).intValue(), new Integer(
+                    setMagSliders(Integer.parseInt(pair[0]), new Integer(
                             pair[1]).intValue());
                 } else {
                     setMagSliders(DEFAULT_MAG, DEFAULT_MAG);
@@ -2359,7 +2359,7 @@ public class AddeImageChooser extends AddeChooser implements
         Hashtable bandToName = (Hashtable) sensorToBandToName.get(new Integer(
                 ad.getSensorID()));
         String name = null;
-        Integer bandInteger = new Integer(band);
+        Integer bandInteger = Integer.valueOf(band);
 
         if (bandToName != null) {
             name = (String) bandToName.get(bandInteger);
@@ -2505,7 +2505,7 @@ public class AddeImageChooser extends AddeChooser implements
                 }
             }
             for (int j = 0; j < satIds.size(); j++) {
-                Integer sensorId = new Integer(satIds.get(j).toString());
+                Integer sensorId = Integer.valueOf(satIds.get(j).toString());
                 sensorToBandToName.put(sensorId, bandToName);
             }
         }
