@@ -181,7 +181,7 @@ public class JSpinField extends JPanel implements ChangeListener, CaretListener,
 	 */
 	public void setValue(int newValue) {
 		setValue(newValue, true, true);
-		spinner.setValue(new Integer(value));
+		spinner.setValue(Integer.valueOf(value));
 	}
 
 	/**
