@@ -721,7 +721,7 @@ public class StationModelControl extends ObsDisplayControl {
                 //                rangeColorPreview.setPreferred
                 rangeColorPreview.setRange(range);
                 Rectangle b = metSymbol.getBounds();
-                ctComps.add(new Object[] { new Integer(b.y),
+                ctComps.add(new Object[] { Integer.valueOf(b.y),
                                            GuiUtils
                                            .topCenter(GuiUtils
                                                .left(new JLabel(param
@@ -3159,8 +3159,8 @@ public class StationModelControl extends ObsDisplayControl {
             if ( !myDisplay.writeKmzFile(
                     new File(filename), currentStationData,
                     kmzNameFld.getText(),
-                    new Integer(kmzWidthFld.getText().trim()).intValue(),
-                    new Integer(kmzHeightFld.getText().trim()).intValue(),
+                    Integer.parseInt(kmzWidthFld.getText().trim()),
+                    Integer.parseInt(kmzHeightFld.getText().trim()),
                     kmzColorSwatch.getColor())) {
                 return;
             }
