@@ -707,7 +707,7 @@ public class TrackControl extends GridDisplayControl {
         int       numFound = 0;
         Hashtable seenTime = new Hashtable();
         for (int timeIdx = 0; timeIdx < numTimes; timeIdx++) {
-            Integer timeKey = new Integer((int) (times[timeIdx] / seconds));
+            Integer timeKey = Integer.valueOf((int) (times[timeIdx] / seconds));
             if ((timeIdx < numTimes - 1) && (seenTime.get(timeKey) != null)) {
                 continue;
             }
@@ -997,7 +997,7 @@ public class TrackControl extends GridDisplayControl {
                              "Marker Layout", SETTINGS_GROUP_DISPLAY);
         dsd.addPropertyValue(new Float(markerScale), "markerScale",
                              "Marker Scale", SETTINGS_GROUP_DISPLAY);
-        dsd.addPropertyValue(new Integer(getLineWidth()), "lineWidth",
+        dsd.addPropertyValue(Integer.valueOf(getLineWidth()), "lineWidth",
                              "Line Width", SETTINGS_GROUP_DISPLAY);
     }
 
